[package]
name = "keycarver"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/captainpete/keycarver"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
boomphf = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
bitcoin = { version = "0.32.5", features = ["serde", "secp-recovery", "rand", "rand-std"] }
rayon = "1.10.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
heed = "0.21.0"

