[package]
name = "keycarver"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/captainpete/keycarver"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
boomphf = { version = "0.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
tempfile = "3.14.0"
bitcoin = { version = "0.32.5", features = ["serde", "secp-recovery", "rand", "rand-std"] }
rayon = "1.10.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
heed = "0.21.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
sha2 = "0.10.8"
hex = "0.4.3"
memmap2 = "0.9.5"
rocksdb = "0.22.0"
secp256k1 = { version = "0.30.0", features = ["global-context"] }
bitcoin_hashes = "0.15.0"
bs58 = "0.5.1"
quick_cache = { version = "0.6.9", features = ["stats"] }

[dev-dependencies]
hex-literal = "0.4.1"

